--- a/login.html
+++ b/login.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <html>
 <head>
-	<meta charset="UTF-8">
-	<title>Git & Github</title>
+	<meta charset="utf-8">
+	<title>Login</title>
 </head>
 <body>
-	This is Git.
 	Login form.
 </body>
 </html>
